bugFix: scrollbar overlap in native + small screen web fix for segmented chip (#282)
* bugFix: scrollbar in native+small screen web fix for segmented chip

* Bug: fix for review comment

--- a/src/kirby/components/chip/chip.component.scss
+++ b/src/kirby/components/chip/chip.component.scss
@@ -1,17 +1,16 @@
 @import "../../scss/web-imports";
-$min-chip-width: 50px;
 
 :host {
-  white-space:nowrap;
+  white-space: nowrap;
   padding: 0 25px;
   height: 30px;
-  font-size: font-size('s');
-  line-height: line-height('xl');
+  font-size: font-size("s");
+  line-height: line-height("xl");
   border-radius: 25px;
   margin-right: 5px;
-  min-width: $min-chip-width;
   cursor: pointer;
-  &:hover,&.is-selected {
-      background-color:get-color('medium');
-    }
+  &:hover,
+  &.is-selected {
+    background-color: get-color("medium");
+  }
 }
